--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,1 +1,20 @@
-<%= @question.content %>
+<h2><%= @question.content %></h2>
+
+Tags:
+<ul>
+  <% @question.tags.each do |tag| %>
+    <li>
+      <%= tag.name %>
+    </li>
+  <% end %>
+</ul>
+
+
+<%= form_for([@question, Answer.new()]) do |f| %>
+
+<p>
+  <%= f.label :content %>
+  <%= f.text_area :content %>
+</p>
+
+<% end %>
