Add answering capability and spec

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -22,3 +22,12 @@ Tags:
 </p>
 
 <% end %>
+
+
+<% unless @question.answers.empty? %>
+  <ul>
+    <% @question.answers.each do |answer| %>
+      <li> <%= answer.content %> </li>
+    <% end %>
+  </ul>
+<% end %>
