--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
  <% #if @auth %>
     <li><%=link_to "Logout", logout_path %></li>
  <% #else %>
-    <li><%=link_to "Sign in to Socrates", signin_path %></li>
+    <li><%=link_to "Sign in to Socrates", "/signin" %></li>
  <% #end %>
 </nav>
 <%= yield %>
