--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Ask Deebz</h1>
 
 <h2>Questions</h2>
-<ul>
+<ul class="question_list">
   <% @questions.each do |question| %>
     <li> <%= link_to question.content, question %></li>      
   <% end %>
