user sign in through auth working

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,11 +8,11 @@
 </head>
 <body>
 <nav>
- <% #if @auth %>
+ <% if current_user %>
     <li><%=link_to "Logout", logout_path %></li>
- <% #else %>
-    <li><%=link_to "Sign in to Socrates", "/signin" %></li>
- <% #end %>
+ <% else %>
+    <li><%=link_to "Sign in to Socrates", signin_path %></li>
+ <% end %>
 </nav>
 <%= yield %>
 
