fixed merged conflicts

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -31,3 +31,6 @@ Tags:
     <% end %>
   </ul>
 <% end %>
+
+<%= link_to "Follow this Question", question_follow_path, options = { :method => :post } %>
+
