--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,7 +7,19 @@
 
 <h3><%= link_to "Ask A Question", new_question_path %></h3>
 
-<h2>Questions</h2>
+<h2>Your Questions</h2>
+
+<% if @user && !@user.questions.empty?%>
+    <ul>
+      <% @user.questions.each do |question| %>
+        <li> <%= link_to question.content, question %></li>
+      <% end %>
+    </ul>
+<% else %>
+  <p>You have no questions.</p>
+<% end %>
+
+<h2>All Questions</h2>
 <ul class="question_list">
   <% @questions.each do |question| %>
     <li> <%= link_to question.content, question %></li>      
