Prevent non-logged in users from voting

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -27,8 +27,10 @@ Tags:
   <ul>
     <% @answers_sorted.each do |answer| %>
       <li> <%= answer.content %> | LIKES: <%=answer.count_total_likes %>
-      <%= link_to "Vote Up", vote_up_path(:answer_id => answer.id, :question_id => @question.id), method: :post  %> /
-      <%= link_to "Vote Down", vote_down_path(:answer_id => answer.id, :question_id => @question.id), method: :post  %>
+      <% if current_user %>
+        <%= link_to "Vote Up", vote_up_path(:answer_id => answer.id, :question_id => @question.id), method: :post  %> /
+        <%= link_to "Vote Down", vote_down_path(:answer_id => answer.id, :question_id => @question.id), method: :post  %>
+      <% end %>
       </li>
     <% end %>
   </ul>
