Add link to user profile on index and layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,9 +11,10 @@
 <ul>
   <li><%= link_to "Home", root_path %></li>
 <% if current_user %>
-  <li><%=link_to "Logout", logout_path %></li>
+  <li><%= link_to "Profile", @user %></li>
+  <li><%= link_to "Logout", logout_path %></li>
 <% else %>
-  <li><%=link_to "Sign in to Socrates", signin_path %></li>
+  <li><%= link_to "Sign in to Socrates", signin_path %></li>
 <% end %>
 </ul>
 </nav>
