--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -26,7 +26,7 @@ Tags:
 <% unless @question.answers.empty? %>
   <ul>
     <% @answers_sorted.each do |answer| %>
-      <li> <%= answer.content %> | LIKES: <%=answer.count_total_likes %>
+      <li> <%= answer.content %> | <span>LIKES: <%=answer.count_total_likes %></span>
       <% if current_user %>
         <%= link_to "Vote Up", vote_up_path(:answer_id => answer.id, :question_id => @question.id), method: :post  %> /
         <%= link_to "Vote Down", vote_down_path(:answer_id => answer.id, :question_id => @question.id), method: :post  %>
