adds conditionality to whether follow question or unfollo question is displayed

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -32,9 +32,9 @@ Tags:
   </ul>
 <% end %>
 
-<% if current_user.is_following?(@question.id) %>
-  <%= link_to "Follow this Question", question_follow_path, options = { :method => :post } %>
-<% else %>
+<% if is_following?(@question.id) %>
   <%= link_to "Stop following this Question", question_unfollow_path, options = { :method => :post } %>
+<% else %>
+  <%= link_to "Follow this Question", question_follow_path, options = { :method => :post } %>
 <% end %>
 
