soc api font implemented

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,14 @@
  *= require_self
  *= require_tree .
  */
+
+
+h1{
+
+  font-family: 'Montserrat', sans-serif;
+}
+
+li{
+
+  font-family: 'Montserrat', sans-serif;
+}
