added header, red sign in button, changed color of li and a text

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,17 +6,25 @@
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-
 </head>
-<body>
-<nav>
- <% if current_user %>
-    <li><%=link_to "Logout", logout_path %></li>
- <% else %>
-    <li><%=link_to "Sign in to Socrates", signin_path %></li>
- <% end %>
-</nav>
-<%= yield %>
-
-</body>
+  <body>
+    <div class = "wrapper">
+    <header>
+      <div class='container'>
+        <h1>ASK DEEBs</h1>
+        <nav>
+          <ul>
+           <% if current_user %>
+              <li><%=link_to "Logout", logout_path %></li>
+           <% else %>
+              <li><a class='sign-in' href='/signin'>Sign In</a></li>
+           <% end %>
+            </ul>
+          </nav>
+        </div>
+    </header>
+      <%= yield %>
+    </div>
+    <footer></footer>
+  </body>
 </html>
