--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,78 @@
  *= require_tree .
  */
 
+.wrapper{
+  min-height: 100%;
+  margin-bottom: -90px;
+  display: block;
+}
+
+header .container{
+
+  padding: 10px 20px;
+}
+
+.container {
+  margin: 0 auto;
+}
+
+header{
+width: 100%;
+min-height: 100px;
+max-height: 250px;
+background: rgba(255,255,255,.96);
+position: fixed;
+top: 0;
+left: 0;
+border-bottom: 1px solid rgba(0,0,0,.35);
+z-index: 50;
+
+}
+
+header nav {
+  width: 45%;
+  overflow: hidden;
+  min-width: 600px;
+}
+
+nav{
+  display: inline-block;
+  text-align: right;
+  float: right;
+  line-height: 50px;
+  position: relative;
+}
+
+nav ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+nav ul li {
+  display: inline-block;
+  margin-left: 20px;
+}
+
+nav ul a {
+  color: #7f8081;
+  text-decoration: none;
+}
+
+nav ul a.sign-in {
+  color: #fff;
+  padding: 5px 20px;
+  text-align: center;
+
+  background: linear-gradient(to bottom,#ef5344 0%,#e64a3b 100%);
+  border: 1px solid #b03b30;
+  -moz-border-radius: 3px;
+
+  border-radius: 3px;
+  width: 152px;
+  height: 25px;
+  text-transform: uppercase;
+}
+
 
 h1{
 
@@ -20,5 +92,13 @@ h1{
 
 li{
 
+
   font-family: 'Montserrat', sans-serif;
+  list-style: none;
+}
+
+li a{
+  color: #7f8081;
+  text-decoration: none;
+
 }
