--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,21 @@
           </nav>
         </div>
     </header>
+    <div class = content>
+      <div id ="guide" class="stick">
+        <p class="ref-title">WELCOME</p>
+      </div>
+      <div id="fullcontainer">
+        <a id="top" name="top" class="section-anchor">&nbsp;</a>
+      </div>
+      <div id="displays">
+
+
+
+      </div>
       <%= yield %>
     </div>
+  </div>
     <footer></footer>
   </body>
 </html>
