--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @question do |f| %>
   <p>
     <%= f.label :content %>
-    <%= f.text_field :content %>
+    <%= f.text_area :content %>
   </p>
   <p>
     <%= f.label :tags %>
