--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,13 +2,27 @@
 <h2>User Profile</h2>
 <h2><%= @user.email %></h2>
 
-
+<h3>Your Questions</h3>
 <% unless @user.questions.empty? %>
   <ul>
   <% @user.questions.each do |question| %>
     <li>
-      <%= question.content %>
+      <%= link_to question.content, question %>
     </li>
   <% end %>
   </ul>
+<% else %>
+  <p>You have no questions</p>
+<% end %>
+
+
+<h3>Following:</h3>
+<% unless @user.followed_questions.empty? %>
+  <ul>
+    <% @user.followed_questions.each do |question| %>
+      <li><%= link_to question.content, question %></li>
+    <% end %>
+  </ul>
+<% else %>
+  <p>You are not following any questions.</p>
 <% end %>
