--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -36,7 +36,7 @@ Tags:
   </ul>
 <% end %>
 
-<% if current_user %>
+<% if current_user && (current_user != @question.user) %>
   <% if is_following?(@question.id) %>
     <%= link_to "Stop following this Question", question_unfollow_path, options = { :method => :post } %>
   <% else %>
