--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -4,7 +4,7 @@ Tags:
 <ul>
   <% @question.tags.each do |tag| %>
     <li>
-      <%= tag.name %>
+      <%= link_to tag.name, tag %>
     </li>
   <% end %>
 </ul>
