--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,43 +1,42 @@
+<div id="index-top"> 
+  <%if @user %>
+    <%= link_to @user.name, @user %>
+    <%= @user.email %>
+    <% end %>
+
+  <h3><%= link_to "Ask A Question", new_question_path %></h3>
 
 
-<%if @user %>
-  <%= link_to @user.name, @user %>
-  <%= @user.email %>
+  <%= form_tag root_path, :id => "search_form", :method => 'get' do %>
+  <p>
+      <%= text_field_tag :search, params[:search] %>
+      <%= submit_tag "Search", :name => nil %>
+  </p>
   <% end %>
 
-<h3><%= link_to "Ask A Question", new_question_path %></h3>
 
 
-<%= form_tag root_path, :method => 'get' do %>
-<p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", :name => nil %>
-</p>
-<% end %>
-
-
-
-<% if current_user %>
-  <h2>Your Questions</h2>
-    <ul>
-      <% if @user.questions.empty? %>
-        <p>You have no questions.</p>
-      <% else %>
-        <% @user.questions.each do |question| %>
-          <li> <%= link_to question.content, question %></li>
+  <% if current_user %>
+    <h2>Your Questions</h2>
+      <ul>
+        <% if @user.questions.empty? %>
+          <p>You have no questions.</p>
+        <% else %>
+          <% @user.questions.each do |question| %>
+            <li> <%= link_to question.content, question %></li>
+          <% end %>
         <% end %>
-      <% end %>
-    </ul>
-    
-<% end %>
+      </ul>
+  <% end %>
+
+</div>
+
 
 <h2>All Questions</h2>
 
-<ul class="question_list">
-  <% @questions.each do |question| %>
-    <li> <%= link_to question.content, question %></li>
-  <% end %>
-</ul>
+<div id="live-search">
+  <%= render "live_search", :object => @questions %>
+</div>
 
 <% if @answers %>
   <h2>Answer Matches</h2>
@@ -50,14 +49,6 @@
 
 <% end %>
 
-
-
-<h2>Tags</h2>
-<div id='tagCloud'>
-  <% @tags.each do |tag| %>
-    <%= link_to tag.name, tag, data: { count: tag.taggings_count} %>
-  <% end %>
-</div>
 
 
 
