include answers to live search results

--- a/app/views/welcome/_live_search.html.erb
+++ b/app/views/welcome/_live_search.html.erb
@@ -1,3 +1,10 @@
 <ul class="question_list">
-  <%= render @questions %>
+  <li><%= render @questions %></li>
 </ul>
+
+<% if @answers %>
+  <h2>Answer Matches</h2>
+  <ul class="answer_list">
+    <li><%= render @answers %></li>
+  </ul>
+<% end %>
