--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,36 +1,34 @@
-<div id="index-top"> 
-  <%if @user %>
+<div id="index-top">
+  <%if current_user %>
     <%= link_to @user.name, @user %>
     <%= @user.email %>
   <% end %>
-</div>
 
-<% if logged_in? %>
-  <h3 class="ask-question"><%= link_to "Ask A Question", new_question_path %></h3>
-<% else %>
-  <h4> <a class='sign-in' href='/signin'>Sign In to Ask a Question</a></h4>
-<% end %>
 
-<%= form_tag root_path, :method => 'get', class: "search" do %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", :name => nil %>
-  </p>
-<% end %>
+  <% if logged_in? %>
+    <h3 class="ask-question"><%= link_to "Ask A Question", new_question_path %></h3>
+  <% else %>
+    <h4> <a class='sign-in' href='/signin'>Sign In to Ask a Question</a></h4>
+  <% end %>
 
-<% if current_user %>
-  <h2>Your Questions</h2>
-    <ul>
-      <% if @user.questions.empty? %>
-        <p>You have no questions.</p>
-      <% else %>
-        <% @user.questions.each do |question| %>
-          <li> <%= link_to question.content, question %></li>
+  <%= form_tag root_path, :id => "search_form", :method => 'get', class: "search" do %>
+      <%= text_field_tag :search, params[:search] %>
+      <%= submit_tag "Search", :name => nil %>
+  <% end %>
+
+  <% if current_user %>
+    <h2>Your Questions</h2>
+      <ul>
+        <% if @user.questions.empty? %>
+          <p>You have no questions.</p>
+        <% else %>
+          <% @user.questions.each do |question| %>
+            <li> <%= link_to question.content, question %></li>
+          <% end %>
         <% end %>
-      <% end %>
-    </ul>
-<% end %>
-
+      </ul>
+  <% end %>
+</div>
 <h2>All Questions</h2>
 
 <div id="live-search">
