refactored into partial

--- a/app/views/answers/_answer_item.html.erb
+++ b/app/views/answers/_answer_item.html.erb
@@ -1,6 +1,16 @@
-<li> <%= answer.content %> | <span class=<%="count-#{answer.id}"%>>LIKES: <%=answer.count_total_likes %></span>
-      <% if current_user %>
-          <%= link_to "Vote Up", vote_path(:answer_id => answer.id, :question_id => @question.id), :data_question => "#{@question.id}", :id => "#{answer.id}", :class => "vote_up" %> /
-        <%= link_to "Vote Down", vote_path(:answer_id => answer.id, :question_id => @question.id), :data_question => "#{@question.id}", :id => "#{answer.id}", :class => "vote_down" %>
-      <% end %>
-      </li>
+<li><p>
+  <%= answer.content %>
+
+  <%= link_to 'Edit', [:edit, @question, answer] %>
+
+</p>
+
+  <span class=<%="count-#{answer.id}"%>>LIKES: <%=answer.count_total_likes %></span>
+
+<div class="vote_info">
+  <% if current_user %>
+    <%= link_to "Vote Up", vote_path(:answer_id => answer.id, :question_id => @question.id), :data_question => "#{@question.id}", :id => "#{answer.id}", :class => "vote_up" %> /
+    <%= link_to "Vote Down", vote_path(:answer_id => answer.id, :question_id => @question.id), :data_question => "#{@question.id}", :id => "#{answer.id}", :class => "vote_down" %>
+  <% end %>
+</div>
+</li>
