change question add/show to include title

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,4 +1,5 @@
-<h2><%= @question.content %></h2>
+<h2><%= @question.title %></h2>
+<p><%= @question.content%></p>
 <p><%= @question.created_at %></p>
 Tags:
 <ul>
