--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,7 +1,12 @@
 <%= form_for @question do |f| %>
+  <%= f.label "What's your question?" %>
   <p>
-    <%= f.label "What's your question?" %><br>
-    <%= f.text_area :content, :placeholder => "What is the best book on learning TDD?" %>
+    <%= f.label "Title" %>
+    <%= f.text_field :title, :placeholder => "What is the best book on learning TDD?"%>
+  </p>
+  <p>
+    <%= f.label "Content" %>
+    <%= f.text_area :content %>
   </p>
   <p>
     <%= f.label :tags %>
