--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,6 @@
 <h2>Questions</h2>
 <ul>
   <% @questions.each do |question| %>
-    <li> <%= question.content %> </li>      
+    <li> <%= question.title %> </li>      
   <% end %>
 </ul>
