switch links labels to show question title instead of question content

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
   <ul>
   <% @user.questions.each do |question| %>
     <li>
-      <%= link_to question.content, question %>
+      <%= link_to question.title, question %>
     </li>
   <% end %>
   </ul>
@@ -20,7 +20,7 @@
 <% unless @user.followed_questions.empty? %>
   <ul>
     <% @user.followed_questions.each do |question| %>
-      <li><%= link_to question.content, question %></li>
+      <li><%= link_to question.title, question %></li>
     <% end %>
   </ul>
 <% else %>
