--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -23,7 +23,7 @@
           <p>You have no questions.</p>
         <% else %>
           <% @user.questions.each do |question| %>
-            <li> <%= link_to question.content, question %></li>
+            <li> <%= link_to question.title, question %></li>
           <% end %>
         <% end %>
       </ul>
