--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -2,6 +2,6 @@
 
 <ol>
   <% @tag.questions.each do |question| %>
-    <li><%= link_to question.content, question %></li>
+    <li><%= link_to question.title, question %></li>
   <% end %>
 </ol>
