add gravatars to profile and question list

--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,1 +1,1 @@
-<li><%= link_to question.content, question %></li>
+<li><%= image_tag question.user.avatar_url, size: "20x20" %> <%= link_to question.title, question %> ( <%= question.answers.count%> ) </li>
