--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 
 <h2>User Profile</h2>
-<%= image_tag @user.avatar_url, size: "100x100" %>
+<%= image_tag @user.avatar_url, :class => "profile_gravatar" %>
 <h2><%= @user.email %></h2>
 
 <h3>Your Questions</h3>
