--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <div class = "wrapper">
     <header>
       <div class='container'>
-        <h1><%= link_to "ASK DEEBs", root_path, :id => 'logo' %></h1>
+        <%= link_to image_tag('logo.png', class:'header-logo'), root_path %>
         <nav>
           <ul>
             <li><%= link_to "Home", root_path %></li>
