--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,7 @@
       <%= link_to question.title, question %>
       <% if my_profile? %>
         <%= link_to "Edit", edit_question_path(question) %>
+        <%= link_to "Delete", question, :method => :delete, :confirm => 'Are you sure?' %>
       <% end %>
     </li>
   <% end %>
