--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,16 +25,11 @@
           </nav>
         </div>
     </header>
-    <div class = content>
-      <div id ="guide" class="stick">
-        <p class="ref-title">WELCOME</p>
-      </div>
-      <div id="fullcontainer">
-        <a id="top" name="top" class="section-anchor">&nbsp;</a>
-      </div>
-      <div id="displays">
-      </div>
+    <div class="content">
       <%= yield %>
+    </div>
+    <div class="sidebar">
+      <%= render "tags/tag_cloud", locals: {tags: @tags} %>
     </div>
   </div>
     <footer></footer>
