--- a/app/assets/stylesheets/basic_styling.css
+++ b/app/assets/stylesheets/basic_styling.css
@@ -14,11 +14,11 @@ header .container{
 }
 
 .sidebar {
-  width: 25%;
+  width: 20%;
   float: left;
   margin-top: 120px;
-  margin-right: 5%;
   margin-left: 5%;
+  padding-right: 10px;
 }
 
 header{
