--- a/app/views/answers/_answer_item.html.erb
+++ b/app/views/answers/_answer_item.html.erb
@@ -13,8 +13,8 @@
 
 <div class="vote_info">
   <% if current_user %>
-    <%= link_to "Vote Up", vote_path(:answer_id => answer.id, :question_id => @question.id), :data_question => "#{@question.id}", :id => "#{answer.id}", :class => "vote_up" %> /
-    <%= link_to "Vote Down", vote_path(:answer_id => answer.id, :question_id => @question.id), :data_question => "#{@question.id}", :id => "#{answer.id}", :class => "vote_down" %>
+    <%= link_to image_tag('up_gray.png'), vote_path(:answer_id => answer.id, :question_id => @question.id), :data_question => "#{@question.id}", :id => "#{answer.id}", :class => "vote_up" %>
+    <%= link_to image_tag('down_gray.png'), vote_path(:answer_id => answer.id, :question_id => @question.id), :data_question => "#{@question.id}", :id => "#{answer.id}", :class => "vote_down" %>
   <% end %>
 </div>
 </li>
