--- a/app/assets/stylesheets/basic_styling.css
+++ b/app/assets/stylesheets/basic_styling.css
@@ -74,7 +74,7 @@ nav ul a.sign-in {
   color: #fff;
   padding: 5px 20px;
   text-align: center;
-  background: linear-gradient(to bottom,#ef5344 0%,#e64a3b 100%);
+  background-color: #CE3A0F;
   border: 1px solid #b03b30;
   -moz-border-radius: 3px;
 
