Fix header styles

--- a/app/views/questions/_new_question.html.erb
+++ b/app/views/questions/_new_question.html.erb
@@ -1,5 +1,5 @@
 <%= form_for @question do |f| %>
-  <%= f.label "What's your question?" %>
+  <h2><%= f.label "What's your question?" %></h2>
   <p>
     <%= f.label "Title" %>
     <%= f.text_field :title, :placeholder => "What is the best book on learning TDD?"%>
