--- a/app/assets/stylesheets/basic_styling.css
+++ b/app/assets/stylesheets/basic_styling.css
@@ -130,7 +130,11 @@ h1{
 
 h2{
   color: #96280B;
-  font-size: 1.2em;
+  font-size: 1.3em;
+}
+
+h3{
+  font-size: 1.1em;
 }
 
 li{
@@ -167,4 +171,8 @@ li a{
   width: 100px;
   height: 100px;
   border: 1px solid #96280B;
+}
+
+#tagsHeader {
+  color: #7F8081;
 }
