--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 
 <h3>Your questions:</h3>
 <% unless @user.questions.empty? %>
-  <ul>
+  <ul class="userQuestions">
   <% @user.questions.each do |question| %>
     <li>
       <%= link_to question.title, question %>
