--- a/app/views/answers/_answer_item.html.erb
+++ b/app/views/answers/_answer_item.html.erb
@@ -11,7 +11,7 @@
 
   <span class=<%="count-#{answer.id}"%>>LIKES: <%=answer.count_total_likes %></span>
 
-<div class="vote_info">
+<div class="vote_info" data-like=<%= "#{i_like?(answer)}" %>>
   <% if current_user %>
     <%= link_to image_tag('', class: "up_inactive"), vote_path(:answer_id => answer.id, :question_id => @question.id), :data_question => "#{@question.id}", :id => "#{answer.id}", :class => "vote_up" %>
     <%= link_to image_tag('', class: "down_inactive"), vote_path(:answer_id => answer.id, :question_id => @question.id), :data_question => "#{@question.id}", :id => "#{answer.id}", :class => "vote_down" %>
