only show top 20 questions on load, and when not searching

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -24,7 +24,8 @@
       </ul>
   <% end %>
 </div>
-<h2>All Questions</h2>
+
+<h2>Recent Questions</h2>
 
 <div id="live-search">
   <%= render "live_search",
