--- a/app/views/questions/_new_question.html.erb
+++ b/app/views/questions/_new_question.html.erb
@@ -1,20 +1,20 @@
 <%= form_for @question do |f| %>
   <h2><%= f.label "What's your question?" %></h2>
   <p>
-    <strong><%= f.label "Title:" %></strong>
+    <strong><p><%= f.label "Title:" %></p></strong>
     <%= f.text_field :title, :placeholder => "What is the best book on learning TDD?"%>
   </p>
   <p>
-    <%= f.label "Content", :class => "hidden" %>
+    <strong><p><%= f.label "Content", :class => "hidden" %></p></strong>
     <%= f.text_area :content %>
   </p>
   <p>
-    <strong><%= f.label "Tags:" %></strong>
+    <strong><p><%= f.label "Tags:" %></p></strong>
     <% if @tags %>
       <%= f.text_field :tags, :value => "#{@tags}", :placeholder => "javascript, ruby, etc." %>
     <% else %>
       <%= f.text_field :tags, :value => "", :placeholder => "javascript, ruby, etc." %>
     <% end %>
   </p>
-  <%= f.submit %>
+  <%= f.submit "Submit", :class => "submitButton" %>
 <% end %>
