--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,7 +23,7 @@
 
 <h3>Following:</h3>
 <% unless @user.followed_questions.empty? %>
-  <ul>
+  <ul class="question_list">
     <% @user.followed_questions.each do |question| %>
       <li><%= link_to question.title, question %></li>
     <% end %>
