--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,8 +7,8 @@
   <% end %>
 
   <%= form_tag root_path, :id => "search_form", :method => 'get', class: "search" do %>
-      <%= text_field_tag :search, params[:search] %>
-      <%= submit_tag "Search", :name => nil %>
+      <%= text_field_tag :search, params[:search], :id => "search_field" %>
+      <%= submit_tag "Search", :class => "submitButton", :name => nil %>
   <% end %>
 
   <% if current_user %>
