--- a/app/assets/stylesheets/basic_styling.css
+++ b/app/assets/stylesheets/basic_styling.css
@@ -245,3 +245,9 @@ border-radius: 5px;
 border: 1px solid #464646;
 cursor: pointer;
 }
+
+.editAnswer {
+  background-color: #FAFFE3;
+  margin: 5px 0;
+  padding: 5px 5px;
+}
