Add follow button styling

--- a/app/assets/stylesheets/basic_styling.css
+++ b/app/assets/stylesheets/basic_styling.css
@@ -279,7 +279,6 @@ cursor: pointer;
 }
 
 .editAnswer {
-  background-color: #FAFFE3;
   margin: 5px 0;
   padding: 5px 5px;
   padding: 8px 12px 9px !important;
@@ -294,3 +293,23 @@ cursor: pointer;
   cursor: pointer;
 }
 
+.followStatus a {
+  margin: 5px 0;
+  padding: 5px 5px;
+  padding: 6px 10px 6px !important;
+  font-size: 16px !important;
+  background-color: #FAFFE3;
+  font-weight: normal;
+  text-decoration: none;
+  color: #2E2E2E;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  padding-top: 20px;
+}
+
+.vote_info {
+  margin: 5px 0 36px 0;
+}
