--- a/app/assets/stylesheets/basic_styling.css
+++ b/app/assets/stylesheets/basic_styling.css
@@ -223,11 +223,9 @@ li a{
 
 #tagCloud a {
   text-decoration: none;
-  border: solid 1px #DADFE5;
+  border: none;
   padding: 1px 4px;
   margin: 3px 2px;
-  border-bottom-right-radius: 15px;
-  border-top-right-radius: 15px;
 }
 
 
