--- a/app/assets/stylesheets/basic_styling.css
+++ b/app/assets/stylesheets/basic_styling.css
@@ -107,6 +107,16 @@ ul.question_list, ul.userQuestions, ul.answers {
   list-style-type: none;
 }
 
+.question_list li {
+  margin:20px;
+}
+
+.question_list a {
+  margin:10px;
+  color:black;
+  font-size:1.4em;
+}
+
 ul.tagsList {
   margin: 0;
   padding: 0;
