--- a/app/views/answers/_answer_item.html.erb
+++ b/app/views/answers/_answer_item.html.erb
@@ -1,4 +1,4 @@
-<li id="answer_<%=answer.id%>">
+<li id="answer_<%=answer.id%>" class="<%= cycle("odd", "even") %>">
   <p>
     <%= answer.content %>
 
