Remove answer left margin

--- a/app/assets/stylesheets/basic_styling.css
+++ b/app/assets/stylesheets/basic_styling.css
@@ -108,7 +108,7 @@ ul.question_list, ul.userQuestions, ul.answers {
 }
 
 .question_list li {
-  margin:20px;
+  margin: 20px 0 20px 0;
 }
 
 .question_list a {
