--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,2 +1,2 @@
-<li class="tst"><%= image_tag question.user.avatar_url, :class => "list_gravatars" %> <%= link_to question.title, question %> ( <%= question.answers.count%> ) </li>
+<li><%= image_tag question.user.avatar_url, :class => "list_gravatars" %> <%= link_to question.title, question %> ( <%= question.answers.count%> ) </li>
 
