--- a/app/views/answers/_answer.html.erb
+++ b/app/views/answers/_answer.html.erb
@@ -1,1 +1,1 @@
-<li><%= link_to answer.content, answer.question %></li>
+<li class="<%= cycle("odd", "even") %>"><%= link_to answer.content, answer.question %></li>
