--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,7 +1,7 @@
 <h2>questions containing tag: <%= @tag.name %></h2>
 
-<ol>
+<ul class="question_list">
   <% @tag.questions.each do |question| %>
-    <li><%= link_to question.title, question %></li>
+    <%= render partial: "questions/question", locals: { question: question } %>
   <% end %>
-</ol>
+</ul>
