Minor edit to tag results heading

--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,4 @@
-<h2>questions containing tag: <%= @tag.name %></h2>
+<h2>Questions containing '<%= @tag.name %>' tag:</h2>
 
 <ul class="question_list">
   <% @tag.questions.each do |question| %>
