Change css to erb file

--- a/app/assets/stylesheets/basic_styling.css.erb
+++ b/app/assets/stylesheets/basic_styling.css.erb
@@ -214,19 +214,19 @@ li a{
 
 
 .up_inactive {
-  content:url('/assets/up_gray.png');
+  content:url(<%= asset_path 'up_gray.png' %>);
 }
 
 .up_active {
-  content:url('/assets/up_blue.png');
+  content:url(<%= asset_path 'up_blue.png' %>);
 }
 
 .down_inactive {
-  content:url('/assets/down_gray.png');
+  content:url(<%= asset_path 'down_gray.png' %>);
 }
 
 .down_active {
-  content:url('/assets/down_blue.png');
+  content:url(<%= asset_path 'down_blue.png' %>);
 }
 
 /*   */
