--- a/app/views/answers/_answer_item.html.erb
+++ b/app/views/answers/_answer_item.html.erb
@@ -9,7 +9,7 @@
       <% end %>
 </p>
 
-<p>by: <%= answer.user.name.split(' ').first %></p>
+<p>by: <%= link_to answer.user.name.split(' ').first, answer.user %></p>
 
   <span class=<%="count-#{answer.id}"%>>LIKES: <%=answer.count_total_likes %></span>
 
